[package]
name = "CrowdSim"
version = "0.1.0"
authors = ["Ruslan Shaiakhmetov <ruslan.shaiakhmetov@studio.unibo.it>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = { path = "three-d" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"